--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'World War, 1914-1918 -- Personal narratives, English'
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Prisoners and prisons, German'
+- GITenberg
 title: Wounded and a Prisoner of War, by an Exchanged Officer
 url: http://www.gutenberg.org/ebooks/45931
